--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -540,6 +540,7 @@ jobs:
           SKIP_CORE_BUILD: "1"
         run: |
           rustup target add aarch64-unknown-linux-gnu
+          rustup default 1.86.0
           ./scripts/build-bindings.sh
       - name: Upload arm64 node binding artifact
         uses: actions/upload-artifact@v4
@@ -597,6 +598,7 @@ jobs:
           CARGO_LOG: cargo::core::compiler::fingerprint=info
         run: |
           rustup target add aarch64-unknown-linux-gnu
+          rustup default 1.86.0
           rm -rf artifacts/aarch64/python || true
           mkdir -p artifacts/aarch64/python
           maturin build --release --target aarch64-unknown-linux-gnu --manifest-path asherah-py/Cargo.toml --skip-auditwheel --out artifacts/aarch64/python 2>&1 | tee /tmp/maturin-build.log
@@ -656,6 +658,7 @@ jobs:
           SKIP_CORE_BUILD: "1"
         run: |
           rustup target add aarch64-unknown-linux-gnu
+          rustup default 1.86.0
           ./scripts/build-bindings.sh
       - name: Upload Java binding artifact
         uses: actions/upload-artifact@v4
@@ -715,6 +718,7 @@ jobs:
           SKIP_CORE_BUILD: "1"
         run: |
           rustup target add aarch64-unknown-linux-gnu
+          rustup default 1.86.0
           ./scripts/build-bindings.sh
       - name: Upload .NET binding artifact
         uses: actions/upload-artifact@v4
